# clack_audio_host

./: .gitignore  Cargo.toml  README.md
clack_audio_host/: Cargo.toml
clack_audio_host/src/: main.rs
midi2jack/: Cargo.toml
src/: args.rs  cmd.rs  main.rs  midi.rs
