[package]
name = "clack_audio_host"
version = "0.1.0"
edition = "2021"
authors = ["Will McGloughlin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.20", features = ["derive"]}
clack-host = {git = "https://github.com/prokopyl/clack.git"}
log = "0.4.22"
env_logger = "0.11.5"